# onyx-libzip

./: .gitignore  Main.hs  Setup.hs  onyx-libzip.cabal  stack.yaml
cbits/libzip-1.10.1/lib/: CMakeLists.txt  zip_crypto.h
src/Onyx/: Zip.chs  Zip.hs
