cabal-version:  1.12
name:           onyx-libzip
version:        0.1.0.0
build-type:     Custom

custom-setup
  setup-depends:
      Cabal
    , base
    , process
    , directory

library
  exposed-modules:
    Onyx.Zip
  hs-source-dirs: src
  ghc-options: -Wall
  build-tools: c2hs
  build-depends: base, bytestring
  default-language: Haskell2010
  -- for crypto support: linux uses stripped down mbedtls, win/mac use platform libs
  extra-libraries: zip, z
  -- system dll for windows crypto
  if os(mingw32)
    extra-libraries: Bcrypt

executable onyx-libzip-test
  main-is: Main.hs
  build-depends: base, onyx-libzip, bytestring
  default-language: Haskell2010
