cabal-version:  1.12
name:           onyx-libzip
version:        0.1.0.0
build-type:     Custom

extra-source-files:
  cbits/libzip-1.10.1/cmake-compat/CheckLibraryExists.cmake
  cbits/libzip-1.10.1/cmake-compat/CheckSymbolExists.cmake
  cbits/libzip-1.10.1/cmake-compat/CMakePushCheckState.cmake
  cbits/libzip-1.10.1/cmake-compat/FindBZip2.cmake
  cbits/libzip-1.10.1/cmake-compat/FindGnuTLS.cmake
  cbits/libzip-1.10.1/cmake-compat/FindLibLZMA.cmake
  cbits/libzip-1.10.1/cmake-compat/FindPackageHandleStandardArgs.cmake
  cbits/libzip-1.10.1/cmake-compat/FindPackageMessage.cmake
  cbits/libzip-1.10.1/cmake-compat/SelectLibraryConfigurations.cmake
  cbits/libzip-1.10.1/cmake-config.h.in
  cbits/libzip-1.10.1/cmake-zipconf.h.in
  cbits/libzip-1.10.1/cmake/Dist.cmake
  cbits/libzip-1.10.1/cmake/FindMbedTLS.cmake
  cbits/libzip-1.10.1/cmake/FindNettle.cmake
  cbits/libzip-1.10.1/cmake/Findzstd.cmake
  cbits/libzip-1.10.1/cmake/GenerateZipErrorStrings.cmake
  cbits/libzip-1.10.1/CMakeLists.txt
  cbits/libzip-1.10.1/examples/add-compressed-data.c
  cbits/libzip-1.10.1/examples/autoclose-archive.c
  cbits/libzip-1.10.1/examples/CMakeLists.txt
  cbits/libzip-1.10.1/examples/in-memory.c
  cbits/libzip-1.10.1/examples/windows-open.c
  cbits/libzip-1.10.1/lib/CMakeLists.txt
  cbits/libzip-1.10.1/lib/compat.h
  cbits/libzip-1.10.1/lib/mbedtls/aes.c
  cbits/libzip-1.10.1/lib/mbedtls/aes.h
  cbits/libzip-1.10.1/lib/mbedtls/aesce.c
  cbits/libzip-1.10.1/lib/mbedtls/aesce.h
  cbits/libzip-1.10.1/lib/mbedtls/aesni.c
  cbits/libzip-1.10.1/lib/mbedtls/aesni.h
  cbits/libzip-1.10.1/lib/mbedtls/alignment.h
  cbits/libzip-1.10.1/lib/mbedtls/aria.c
  cbits/libzip-1.10.1/lib/mbedtls/aria.h
  cbits/libzip-1.10.1/lib/mbedtls/asn1.h
  cbits/libzip-1.10.1/lib/mbedtls/asn1parse.c
  cbits/libzip-1.10.1/lib/mbedtls/asn1write.c
  cbits/libzip-1.10.1/lib/mbedtls/asn1write.h
  cbits/libzip-1.10.1/lib/mbedtls/base64.c
  cbits/libzip-1.10.1/lib/mbedtls/base64.h
  cbits/libzip-1.10.1/lib/mbedtls/base64_internal.h
  cbits/libzip-1.10.1/lib/mbedtls/bignum.c
  cbits/libzip-1.10.1/lib/mbedtls/bignum.h
  cbits/libzip-1.10.1/lib/mbedtls/bignum_core.c
  cbits/libzip-1.10.1/lib/mbedtls/bignum_core.h
  cbits/libzip-1.10.1/lib/mbedtls/bignum_mod.c
  cbits/libzip-1.10.1/lib/mbedtls/bignum_mod.h
  cbits/libzip-1.10.1/lib/mbedtls/bignum_mod_raw.c
  cbits/libzip-1.10.1/lib/mbedtls/bignum_mod_raw.h
  cbits/libzip-1.10.1/lib/mbedtls/bignum_mod_raw_invasive.h
  cbits/libzip-1.10.1/lib/mbedtls/bn_mul.h
  cbits/libzip-1.10.1/lib/mbedtls/build_info.h
  cbits/libzip-1.10.1/lib/mbedtls/camellia.c
  cbits/libzip-1.10.1/lib/mbedtls/camellia.h
  cbits/libzip-1.10.1/lib/mbedtls/ccm.c
  cbits/libzip-1.10.1/lib/mbedtls/ccm.h
  cbits/libzip-1.10.1/lib/mbedtls/chacha20.c
  cbits/libzip-1.10.1/lib/mbedtls/chacha20.h
  cbits/libzip-1.10.1/lib/mbedtls/chachapoly.c
  cbits/libzip-1.10.1/lib/mbedtls/chachapoly.h
  cbits/libzip-1.10.1/lib/mbedtls/check_config.h
  cbits/libzip-1.10.1/lib/mbedtls/check_crypto_config.h
  cbits/libzip-1.10.1/lib/mbedtls/cipher.c
  cbits/libzip-1.10.1/lib/mbedtls/cipher.h
  cbits/libzip-1.10.1/lib/mbedtls/cipher_wrap.c
  cbits/libzip-1.10.1/lib/mbedtls/cipher_wrap.h
  cbits/libzip-1.10.1/lib/mbedtls/cmac.c
  cbits/libzip-1.10.1/lib/mbedtls/cmac.h
  cbits/libzip-1.10.1/lib/mbedtls/CMakeLists.txt
  cbits/libzip-1.10.1/lib/mbedtls/common.h
  cbits/libzip-1.10.1/lib/mbedtls/compat-2.x.h
  cbits/libzip-1.10.1/lib/mbedtls/config_adjust_legacy_crypto.h
  cbits/libzip-1.10.1/lib/mbedtls/config_adjust_legacy_from_psa.h
  cbits/libzip-1.10.1/lib/mbedtls/config_adjust_psa_from_legacy.h
  cbits/libzip-1.10.1/lib/mbedtls/config_adjust_psa_superset_legacy.h
  cbits/libzip-1.10.1/lib/mbedtls/config_adjust_ssl.h
  cbits/libzip-1.10.1/lib/mbedtls/config_adjust_x509.h
  cbits/libzip-1.10.1/lib/mbedtls/config_psa.h
  cbits/libzip-1.10.1/lib/mbedtls/constant_time.c
  cbits/libzip-1.10.1/lib/mbedtls/constant_time.h
  cbits/libzip-1.10.1/lib/mbedtls/constant_time_impl.h
  cbits/libzip-1.10.1/lib/mbedtls/constant_time_internal.h
  cbits/libzip-1.10.1/lib/mbedtls/ctr_drbg.c
  cbits/libzip-1.10.1/lib/mbedtls/ctr_drbg.h
  cbits/libzip-1.10.1/lib/mbedtls/debug.c
  cbits/libzip-1.10.1/lib/mbedtls/debug.h
  cbits/libzip-1.10.1/lib/mbedtls/des.c
  cbits/libzip-1.10.1/lib/mbedtls/des.h
  cbits/libzip-1.10.1/lib/mbedtls/dhm.c
  cbits/libzip-1.10.1/lib/mbedtls/dhm.h
  cbits/libzip-1.10.1/lib/mbedtls/ecdh.c
  cbits/libzip-1.10.1/lib/mbedtls/ecdh.h
  cbits/libzip-1.10.1/lib/mbedtls/ecdsa.c
  cbits/libzip-1.10.1/lib/mbedtls/ecdsa.h
  cbits/libzip-1.10.1/lib/mbedtls/ecjpake.c
  cbits/libzip-1.10.1/lib/mbedtls/ecjpake.h
  cbits/libzip-1.10.1/lib/mbedtls/ecp.c
  cbits/libzip-1.10.1/lib/mbedtls/ecp.h
  cbits/libzip-1.10.1/lib/mbedtls/ecp_curves.c
  cbits/libzip-1.10.1/lib/mbedtls/ecp_curves_new.c
  cbits/libzip-1.10.1/lib/mbedtls/ecp_internal_alt.h
  cbits/libzip-1.10.1/lib/mbedtls/ecp_invasive.h
  cbits/libzip-1.10.1/lib/mbedtls/entropy.c
  cbits/libzip-1.10.1/lib/mbedtls/entropy.h
  cbits/libzip-1.10.1/lib/mbedtls/entropy_poll.c
  cbits/libzip-1.10.1/lib/mbedtls/entropy_poll.h
  cbits/libzip-1.10.1/lib/mbedtls/error.c
  cbits/libzip-1.10.1/lib/mbedtls/error.h
  cbits/libzip-1.10.1/lib/mbedtls/gcm.c
  cbits/libzip-1.10.1/lib/mbedtls/gcm.h
  cbits/libzip-1.10.1/lib/mbedtls/hkdf.c
  cbits/libzip-1.10.1/lib/mbedtls/hkdf.h
  cbits/libzip-1.10.1/lib/mbedtls/hmac_drbg.c
  cbits/libzip-1.10.1/lib/mbedtls/hmac_drbg.h
  cbits/libzip-1.10.1/lib/mbedtls/lmots.c
  cbits/libzip-1.10.1/lib/mbedtls/lmots.h
  cbits/libzip-1.10.1/lib/mbedtls/lms.c
  cbits/libzip-1.10.1/lib/mbedtls/lms.h
  cbits/libzip-1.10.1/lib/mbedtls/Makefile
  cbits/libzip-1.10.1/lib/mbedtls/mbedtls_config.h
  cbits/libzip-1.10.1/lib/mbedtls/md.c
  cbits/libzip-1.10.1/lib/mbedtls/md.h
  cbits/libzip-1.10.1/lib/mbedtls/md5.c
  cbits/libzip-1.10.1/lib/mbedtls/md5.h
  cbits/libzip-1.10.1/lib/mbedtls/md_psa.h
  cbits/libzip-1.10.1/lib/mbedtls/md_wrap.h
  cbits/libzip-1.10.1/lib/mbedtls/memory_buffer_alloc.c
  cbits/libzip-1.10.1/lib/mbedtls/memory_buffer_alloc.h
  cbits/libzip-1.10.1/lib/mbedtls/mps_common.h
  cbits/libzip-1.10.1/lib/mbedtls/mps_error.h
  cbits/libzip-1.10.1/lib/mbedtls/mps_reader.c
  cbits/libzip-1.10.1/lib/mbedtls/mps_reader.h
  cbits/libzip-1.10.1/lib/mbedtls/mps_trace.c
  cbits/libzip-1.10.1/lib/mbedtls/mps_trace.h
  cbits/libzip-1.10.1/lib/mbedtls/net_sockets.c
  cbits/libzip-1.10.1/lib/mbedtls/net_sockets.h
  cbits/libzip-1.10.1/lib/mbedtls/nist_kw.c
  cbits/libzip-1.10.1/lib/mbedtls/nist_kw.h
  cbits/libzip-1.10.1/lib/mbedtls/oid.c
  cbits/libzip-1.10.1/lib/mbedtls/oid.h
  cbits/libzip-1.10.1/lib/mbedtls/padlock.c
  cbits/libzip-1.10.1/lib/mbedtls/padlock.h
  cbits/libzip-1.10.1/lib/mbedtls/pem.c
  cbits/libzip-1.10.1/lib/mbedtls/pem.h
  cbits/libzip-1.10.1/lib/mbedtls/pk.c
  cbits/libzip-1.10.1/lib/mbedtls/pk.h
  cbits/libzip-1.10.1/lib/mbedtls/pk_internal.h
  cbits/libzip-1.10.1/lib/mbedtls/pk_wrap.c
  cbits/libzip-1.10.1/lib/mbedtls/pk_wrap.h
  cbits/libzip-1.10.1/lib/mbedtls/pkcs5.c
  cbits/libzip-1.10.1/lib/mbedtls/pkcs5.h
  cbits/libzip-1.10.1/lib/mbedtls/pkcs7.c
  cbits/libzip-1.10.1/lib/mbedtls/pkcs7.h
  cbits/libzip-1.10.1/lib/mbedtls/pkcs12.c
  cbits/libzip-1.10.1/lib/mbedtls/pkcs12.h
  cbits/libzip-1.10.1/lib/mbedtls/pkparse.c
  cbits/libzip-1.10.1/lib/mbedtls/pkwrite.c
  cbits/libzip-1.10.1/lib/mbedtls/pkwrite.h
  cbits/libzip-1.10.1/lib/mbedtls/platform.c
  cbits/libzip-1.10.1/lib/mbedtls/platform.h
  cbits/libzip-1.10.1/lib/mbedtls/platform_time.h
  cbits/libzip-1.10.1/lib/mbedtls/platform_util.c
  cbits/libzip-1.10.1/lib/mbedtls/platform_util.h
  cbits/libzip-1.10.1/lib/mbedtls/poly1305.c
  cbits/libzip-1.10.1/lib/mbedtls/poly1305.h
  cbits/libzip-1.10.1/lib/mbedtls/private_access.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_aead.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_aead.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_cipher.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_cipher.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_client.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_core.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_core_common.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_driver_wrappers.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_driver_wrappers_no_static.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_driver_wrappers_no_static.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_ecp.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_ecp.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_ffdh.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_ffdh.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_hash.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_hash.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_invasive.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_its.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_mac.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_mac.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_pake.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_pake.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_random_impl.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_rsa.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_rsa.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_se.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_se.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_slot_management.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_slot_management.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_storage.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_crypto_storage.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_its_file.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_util.c
  cbits/libzip-1.10.1/lib/mbedtls/psa_util.h
  cbits/libzip-1.10.1/lib/mbedtls/psa_util_internal.h
  cbits/libzip-1.10.1/lib/mbedtls/ripemd160.c
  cbits/libzip-1.10.1/lib/mbedtls/ripemd160.h
  cbits/libzip-1.10.1/lib/mbedtls/rsa.c
  cbits/libzip-1.10.1/lib/mbedtls/rsa.h
  cbits/libzip-1.10.1/lib/mbedtls/rsa_alt_helpers.c
  cbits/libzip-1.10.1/lib/mbedtls/rsa_alt_helpers.h
  cbits/libzip-1.10.1/lib/mbedtls/sha1.c
  cbits/libzip-1.10.1/lib/mbedtls/sha1.h
  cbits/libzip-1.10.1/lib/mbedtls/sha3.c
  cbits/libzip-1.10.1/lib/mbedtls/sha3.h
  cbits/libzip-1.10.1/lib/mbedtls/sha256.c
  cbits/libzip-1.10.1/lib/mbedtls/sha256.h
  cbits/libzip-1.10.1/lib/mbedtls/sha512.c
  cbits/libzip-1.10.1/lib/mbedtls/sha512.h
  cbits/libzip-1.10.1/lib/mbedtls/ssl.h
  cbits/libzip-1.10.1/lib/mbedtls/ssl_cache.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_cache.h
  cbits/libzip-1.10.1/lib/mbedtls/ssl_ciphersuites.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_ciphersuites.h
  cbits/libzip-1.10.1/lib/mbedtls/ssl_client.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_client.h
  cbits/libzip-1.10.1/lib/mbedtls/ssl_cookie.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_cookie.h
  cbits/libzip-1.10.1/lib/mbedtls/ssl_debug_helpers.h
  cbits/libzip-1.10.1/lib/mbedtls/ssl_debug_helpers_generated.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_misc.h
  cbits/libzip-1.10.1/lib/mbedtls/ssl_msg.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_ticket.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_ticket.h
  cbits/libzip-1.10.1/lib/mbedtls/ssl_tls.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_tls12_client.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_tls12_server.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_tls13_client.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_tls13_generic.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_tls13_invasive.h
  cbits/libzip-1.10.1/lib/mbedtls/ssl_tls13_keys.c
  cbits/libzip-1.10.1/lib/mbedtls/ssl_tls13_keys.h
  cbits/libzip-1.10.1/lib/mbedtls/ssl_tls13_server.c
  cbits/libzip-1.10.1/lib/mbedtls/threading.c
  cbits/libzip-1.10.1/lib/mbedtls/threading.h
  cbits/libzip-1.10.1/lib/mbedtls/timing.c
  cbits/libzip-1.10.1/lib/mbedtls/timing.h
  cbits/libzip-1.10.1/lib/mbedtls/version.c
  cbits/libzip-1.10.1/lib/mbedtls/version.h
  cbits/libzip-1.10.1/lib/mbedtls/version_features.c
  cbits/libzip-1.10.1/lib/mbedtls/x509.c
  cbits/libzip-1.10.1/lib/mbedtls/x509.h
  cbits/libzip-1.10.1/lib/mbedtls/x509_create.c
  cbits/libzip-1.10.1/lib/mbedtls/x509_crl.c
  cbits/libzip-1.10.1/lib/mbedtls/x509_crl.h
  cbits/libzip-1.10.1/lib/mbedtls/x509_crt.c
  cbits/libzip-1.10.1/lib/mbedtls/x509_crt.h
  cbits/libzip-1.10.1/lib/mbedtls/x509_csr.c
  cbits/libzip-1.10.1/lib/mbedtls/x509_csr.h
  cbits/libzip-1.10.1/lib/mbedtls/x509write.c
  cbits/libzip-1.10.1/lib/mbedtls/x509write_crt.c
  cbits/libzip-1.10.1/lib/mbedtls/x509write_csr.c
  cbits/libzip-1.10.1/lib/psa/build_info.h
  cbits/libzip-1.10.1/lib/psa/crypto.h
  cbits/libzip-1.10.1/lib/psa/crypto_adjust_auto_enabled.h
  cbits/libzip-1.10.1/lib/psa/crypto_adjust_config_key_pair_types.h
  cbits/libzip-1.10.1/lib/psa/crypto_adjust_config_synonyms.h
  cbits/libzip-1.10.1/lib/psa/crypto_builtin_composites.h
  cbits/libzip-1.10.1/lib/psa/crypto_builtin_key_derivation.h
  cbits/libzip-1.10.1/lib/psa/crypto_builtin_primitives.h
  cbits/libzip-1.10.1/lib/psa/crypto_compat.h
  cbits/libzip-1.10.1/lib/psa/crypto_config.h
  cbits/libzip-1.10.1/lib/psa/crypto_driver_common.h
  cbits/libzip-1.10.1/lib/psa/crypto_driver_contexts_composites.h
  cbits/libzip-1.10.1/lib/psa/crypto_driver_contexts_key_derivation.h
  cbits/libzip-1.10.1/lib/psa/crypto_driver_contexts_primitives.h
  cbits/libzip-1.10.1/lib/psa/crypto_extra.h
  cbits/libzip-1.10.1/lib/psa/crypto_legacy.h
  cbits/libzip-1.10.1/lib/psa/crypto_platform.h
  cbits/libzip-1.10.1/lib/psa/crypto_se_driver.h
  cbits/libzip-1.10.1/lib/psa/crypto_sizes.h
  cbits/libzip-1.10.1/lib/psa/crypto_struct.h
  cbits/libzip-1.10.1/lib/psa/crypto_types.h
  cbits/libzip-1.10.1/lib/psa/crypto_values.h
  cbits/libzip-1.10.1/lib/zip.h
  cbits/libzip-1.10.1/lib/zip_add.c
  cbits/libzip-1.10.1/lib/zip_add_dir.c
  cbits/libzip-1.10.1/lib/zip_add_entry.c
  cbits/libzip-1.10.1/lib/zip_algorithm_bzip2.c
  cbits/libzip-1.10.1/lib/zip_algorithm_deflate.c
  cbits/libzip-1.10.1/lib/zip_algorithm_xz.c
  cbits/libzip-1.10.1/lib/zip_algorithm_zstd.c
  cbits/libzip-1.10.1/lib/zip_buffer.c
  cbits/libzip-1.10.1/lib/zip_close.c
  cbits/libzip-1.10.1/lib/zip_crypto.h
  cbits/libzip-1.10.1/lib/zip_crypto_commoncrypto.c
  cbits/libzip-1.10.1/lib/zip_crypto_commoncrypto.h
  cbits/libzip-1.10.1/lib/zip_crypto_gnutls.c
  cbits/libzip-1.10.1/lib/zip_crypto_gnutls.h
  cbits/libzip-1.10.1/lib/zip_crypto_mbedtls.c
  cbits/libzip-1.10.1/lib/zip_crypto_mbedtls.h
  cbits/libzip-1.10.1/lib/zip_crypto_openssl.c
  cbits/libzip-1.10.1/lib/zip_crypto_openssl.h
  cbits/libzip-1.10.1/lib/zip_crypto_win.c
  cbits/libzip-1.10.1/lib/zip_crypto_win.h
  cbits/libzip-1.10.1/lib/zip_delete.c
  cbits/libzip-1.10.1/lib/zip_dir_add.c
  cbits/libzip-1.10.1/lib/zip_dirent.c
  cbits/libzip-1.10.1/lib/zip_discard.c
  cbits/libzip-1.10.1/lib/zip_entry.c
  cbits/libzip-1.10.1/lib/zip_error.c
  cbits/libzip-1.10.1/lib/zip_error_clear.c
  cbits/libzip-1.10.1/lib/zip_error_get.c
  cbits/libzip-1.10.1/lib/zip_error_get_sys_type.c
  cbits/libzip-1.10.1/lib/zip_error_strerror.c
  cbits/libzip-1.10.1/lib/zip_error_to_str.c
  cbits/libzip-1.10.1/lib/zip_extra_field.c
  cbits/libzip-1.10.1/lib/zip_extra_field_api.c
  cbits/libzip-1.10.1/lib/zip_fclose.c
  cbits/libzip-1.10.1/lib/zip_fdopen.c
  cbits/libzip-1.10.1/lib/zip_file_add.c
  cbits/libzip-1.10.1/lib/zip_file_error_clear.c
  cbits/libzip-1.10.1/lib/zip_file_error_get.c
  cbits/libzip-1.10.1/lib/zip_file_get_comment.c
  cbits/libzip-1.10.1/lib/zip_file_get_external_attributes.c
  cbits/libzip-1.10.1/lib/zip_file_get_offset.c
  cbits/libzip-1.10.1/lib/zip_file_rename.c
  cbits/libzip-1.10.1/lib/zip_file_replace.c
  cbits/libzip-1.10.1/lib/zip_file_set_comment.c
  cbits/libzip-1.10.1/lib/zip_file_set_encryption.c
  cbits/libzip-1.10.1/lib/zip_file_set_external_attributes.c
  cbits/libzip-1.10.1/lib/zip_file_set_mtime.c
  cbits/libzip-1.10.1/lib/zip_file_strerror.c
  cbits/libzip-1.10.1/lib/zip_fopen.c
  cbits/libzip-1.10.1/lib/zip_fopen_encrypted.c
  cbits/libzip-1.10.1/lib/zip_fopen_index.c
  cbits/libzip-1.10.1/lib/zip_fopen_index_encrypted.c
  cbits/libzip-1.10.1/lib/zip_fread.c
  cbits/libzip-1.10.1/lib/zip_fseek.c
  cbits/libzip-1.10.1/lib/zip_ftell.c
  cbits/libzip-1.10.1/lib/zip_get_archive_comment.c
  cbits/libzip-1.10.1/lib/zip_get_archive_flag.c
  cbits/libzip-1.10.1/lib/zip_get_encryption_implementation.c
  cbits/libzip-1.10.1/lib/zip_get_file_comment.c
  cbits/libzip-1.10.1/lib/zip_get_name.c
  cbits/libzip-1.10.1/lib/zip_get_num_entries.c
  cbits/libzip-1.10.1/lib/zip_get_num_files.c
  cbits/libzip-1.10.1/lib/zip_hash.c
  cbits/libzip-1.10.1/lib/zip_io_util.c
  cbits/libzip-1.10.1/lib/zip_libzip_version.c
  cbits/libzip-1.10.1/lib/zip_memdup.c
  cbits/libzip-1.10.1/lib/zip_name_locate.c
  cbits/libzip-1.10.1/lib/zip_new.c
  cbits/libzip-1.10.1/lib/zip_open.c
  cbits/libzip-1.10.1/lib/zip_pkware.c
  cbits/libzip-1.10.1/lib/zip_progress.c
  cbits/libzip-1.10.1/lib/zip_random_unix.c
  cbits/libzip-1.10.1/lib/zip_random_uwp.c
  cbits/libzip-1.10.1/lib/zip_random_win32.c
  cbits/libzip-1.10.1/lib/zip_rename.c
  cbits/libzip-1.10.1/lib/zip_replace.c
  cbits/libzip-1.10.1/lib/zip_set_archive_comment.c
  cbits/libzip-1.10.1/lib/zip_set_archive_flag.c
  cbits/libzip-1.10.1/lib/zip_set_default_password.c
  cbits/libzip-1.10.1/lib/zip_set_file_comment.c
  cbits/libzip-1.10.1/lib/zip_set_file_compression.c
  cbits/libzip-1.10.1/lib/zip_set_name.c
  cbits/libzip-1.10.1/lib/zip_source_accept_empty.c
  cbits/libzip-1.10.1/lib/zip_source_begin_write.c
  cbits/libzip-1.10.1/lib/zip_source_begin_write_cloning.c
  cbits/libzip-1.10.1/lib/zip_source_buffer.c
  cbits/libzip-1.10.1/lib/zip_source_call.c
  cbits/libzip-1.10.1/lib/zip_source_close.c
  cbits/libzip-1.10.1/lib/zip_source_commit_write.c
  cbits/libzip-1.10.1/lib/zip_source_compress.c
  cbits/libzip-1.10.1/lib/zip_source_crc.c
  cbits/libzip-1.10.1/lib/zip_source_error.c
  cbits/libzip-1.10.1/lib/zip_source_file.h
  cbits/libzip-1.10.1/lib/zip_source_file_common.c
  cbits/libzip-1.10.1/lib/zip_source_file_stdio.c
  cbits/libzip-1.10.1/lib/zip_source_file_stdio.h
  cbits/libzip-1.10.1/lib/zip_source_file_stdio_named.c
  cbits/libzip-1.10.1/lib/zip_source_file_win32.c
  cbits/libzip-1.10.1/lib/zip_source_file_win32.h
  cbits/libzip-1.10.1/lib/zip_source_file_win32_ansi.c
  cbits/libzip-1.10.1/lib/zip_source_file_win32_named.c
  cbits/libzip-1.10.1/lib/zip_source_file_win32_utf8.c
  cbits/libzip-1.10.1/lib/zip_source_file_win32_utf16.c
  cbits/libzip-1.10.1/lib/zip_source_free.c
  cbits/libzip-1.10.1/lib/zip_source_function.c
  cbits/libzip-1.10.1/lib/zip_source_get_file_attributes.c
  cbits/libzip-1.10.1/lib/zip_source_is_deleted.c
  cbits/libzip-1.10.1/lib/zip_source_layered.c
  cbits/libzip-1.10.1/lib/zip_source_open.c
  cbits/libzip-1.10.1/lib/zip_source_pass_to_lower_layer.c
  cbits/libzip-1.10.1/lib/zip_source_pkware_decode.c
  cbits/libzip-1.10.1/lib/zip_source_pkware_encode.c
  cbits/libzip-1.10.1/lib/zip_source_read.c
  cbits/libzip-1.10.1/lib/zip_source_remove.c
  cbits/libzip-1.10.1/lib/zip_source_rollback_write.c
  cbits/libzip-1.10.1/lib/zip_source_seek.c
  cbits/libzip-1.10.1/lib/zip_source_seek_write.c
  cbits/libzip-1.10.1/lib/zip_source_stat.c
  cbits/libzip-1.10.1/lib/zip_source_supports.c
  cbits/libzip-1.10.1/lib/zip_source_tell.c
  cbits/libzip-1.10.1/lib/zip_source_tell_write.c
  cbits/libzip-1.10.1/lib/zip_source_window.c
  cbits/libzip-1.10.1/lib/zip_source_winzip_aes_decode.c
  cbits/libzip-1.10.1/lib/zip_source_winzip_aes_encode.c
  cbits/libzip-1.10.1/lib/zip_source_write.c
  cbits/libzip-1.10.1/lib/zip_source_zip.c
  cbits/libzip-1.10.1/lib/zip_source_zip_new.c
  cbits/libzip-1.10.1/lib/zip_stat.c
  cbits/libzip-1.10.1/lib/zip_stat_index.c
  cbits/libzip-1.10.1/lib/zip_stat_init.c
  cbits/libzip-1.10.1/lib/zip_strerror.c
  cbits/libzip-1.10.1/lib/zip_string.c
  cbits/libzip-1.10.1/lib/zip_unchange.c
  cbits/libzip-1.10.1/lib/zip_unchange_all.c
  cbits/libzip-1.10.1/lib/zip_unchange_archive.c
  cbits/libzip-1.10.1/lib/zip_unchange_data.c
  cbits/libzip-1.10.1/lib/zip_utf-8.c
  cbits/libzip-1.10.1/lib/zip_winzip_aes.c
  cbits/libzip-1.10.1/lib/zipint.h
  cbits/libzip-1.10.1/libzip-config.cmake.in
  cbits/libzip-1.10.1/libzip.pc.in
  cbits/libzip-1.10.1/src/CMakeLists.txt
  cbits/libzip-1.10.1/src/diff_output.c
  cbits/libzip-1.10.1/src/diff_output.h
  cbits/libzip-1.10.1/src/getopt.c
  cbits/libzip-1.10.1/src/getopt.h
  cbits/libzip-1.10.1/src/zipcmp.c
  cbits/libzip-1.10.1/src/zipmerge.c
  cbits/libzip-1.10.1/src/ziptool.c

custom-setup
  setup-depends:
      Cabal
    , base
    , process
    , directory

library
  exposed-modules:
    Onyx.Zip
  hs-source-dirs: src
  ghc-options: -Wall
  build-tools: c2hs
  build-depends: base, bytestring
  default-language: Haskell2010
  -- for crypto support: linux uses stripped down mbedtls, win/mac use platform libs
  extra-libraries: zip, z
  -- system dll for windows crypto
  if os(mingw32)
    extra-libraries: Bcrypt

executable onyx-libzip-test
  main-is: Main.hs
  build-depends: base, onyx-libzip, bytestring
  default-language: Haskell2010
